--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,30 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Hidden Valleys Amateur Radio Club
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The Hidden Valleys Amateur Radio Club meets on the second Tuesday of each month 
+  at the Grant County Community Service center in Lancaster WI. The meetings are 
+  at 7:00 PM and anyone with an interest in amateur radio is welcome to attend.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+minima:
+  hard_wrap: true
+  header_pages:
+    - meetings.md
+    - contact.md
+    - about.md
+  social_links:
+    - facebook: HVARC
 
 # Exclude from processing.
 # The following items will not be processed, by default.
