--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
 
+[{.,}*.{js{,*},y{a,}ml}]
+indent_style = space
+indent_size = 2
+
 
 [*.{md,txt}]
 indent_style = space
