--- a/.editorconfig
+++ b/.editorconfig
@@ -4,20 +4,16 @@
 root = true
 
 [*]
-indent_style = space
 indent_size = 3
 end_of_line = crlf
 charset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = false
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [{.,}*.{js{,*},y{a,}ml}]
 indent_style = space
 indent_size = 2
 
-
 [*.{md,txt}]
 indent_style = space
 indent_size = 4
-trim_trailing_whitespace = false
-insert_final_newline = true
