add spelling exceptions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
    "cSpell.words": [
       "Amdahl",
       "Beetown",
-      "Bontrenger",
+      "Bontreger",
       "Chulafich",
+      "hamfests",
       "HVARC",
       "Platteville",
       "Scheuerell"
