link farm library

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ minima:
     - events.md
     - contact.md
     - about.md
+    - library.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
