--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
    "cSpell.words": [
       "Amdahl",
       "Beetown",
-      "Bontrenger",
+      "Bontreger",
       "Chulafich",
+      "hamfests",
       "HVARC",
       "Platteville",
+      "Richland",
       "Scheuerell"
    ]
 }
