set up GHPages auto update

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,12 @@
 {
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "description": "Auto update github Pages",
+      "packagePatterns":["github-pages"],
+      "automerge": true
+    }
   ]
 }
