--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,7 @@
 {
   "extends": [
+    "github>whitesource/merge-confidence:beta",
+    "github>renovatebot/spring-remediations",
     "config:base"
   ],
   "packageRules": [
