disable status check req for GHPages

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,8 @@
     {
       "description": "Auto update github Pages",
       "packagePatterns":["github-pages"],
-      "automerge": true
+      "automerge": true,
+      "requiredStatusChecks": null
     }
   ]
 }
