--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,15 @@
 {
    "cSpell.words": [
-      "Amdahl",
-      "Beetown",
-      "Bontreger",
-      "Chulafich",
-      "hamfests",
-      "HVARC",
-      "Platteville",
-      "Richland",
-      "Scheuerell",
-      "WARAC's"
-   ]
+    "Amdahl",
+    "Beetown",
+    "Bontreger",
+    "Chulafich",
+    "Hamfest",
+    "hamfests",
+    "HVARC",
+    "Platteville",
+    "Richland",
+    "Scheuerell",
+    "WARAC's"
+  ]
 }
