--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Hidden Valleys Amateur Radio Club
 description: >- # this means to ignore newlines until "baseurl:"
   The Hidden Valleys Amateur Radio Club meets on the second Tuesday of each month
-  at the Grant County Community Service center in Lancaster WI. The meetings are
+  at the Southwest Health Center in Platteville WI. The meetings are in the lower level meeting room
   at 7:00 PM and anyone with an interest in amateur radio is welcome to attend.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
